--- a/index.html
+++ b/index.html
@@ -178,15 +178,14 @@
 
             <div class="column has-text-centered">
             
-                <!-- arXiv Paper (Coming Soon) -->
+                <!-- arXiv Paper -->
                 <span class="link-block">
-                  <a class="external-link button is-normal is-rounded is-dark" disabled>
+                  <a href="https://arxiv.org/abs/2512.18814" target="_blank"
+                  class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv
-                    <span style="font-size: 0.8em; opacity: 0.9; font-style: italic;">&nbsp;(Coming Soon)</span>
-                  </span>
+                  <span>arXiv</span>
                 </a>
               </span>
 
@@ -627,7 +626,7 @@
         <pre id="bibtex-code"><code>@article{yang2024echomotion,
     title={EchoMotion: Unified Human Video and Motion Generation via Dual-Modality Diffusion Transformer},
     author={Yang, Yuxiao and Sheng, Hualian and Cai, Sijia and Lin, Jing and Wang, Jiahao and Deng, Bing and Lu, Junzhe and Wang, Haoqian and Ye, Jieping},
-    journal={arXiv preprint arXiv:XXXX.XXXXX},
+    journal={arXiv preprint arXiv:2512.18814},
     year={2024}
   }</code></pre>
       </div>
