--- a/index.html
+++ b/index.html
@@ -189,15 +189,14 @@
                 </a>
               </span>
 
-                <!-- Code Button (Coming Soon) -->
+                <!-- Code Button -->
                 <span class="link-block">
-                  <a class="external-link button is-normal is-rounded is-dark" disabled>
+                  <a href="https://github.com/YuxiaoYang23/EchoMotion" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code
-                      <span style="font-size: 0.8em; opacity: 0.9; font-style: italic;">&nbsp;(Coming Soon)</span>
-                    </span>
+                    <span>Code</span>
                   </a>
                 </span>
             
